This file shows the changes in this release of xPDO.

- Fix PHP 7.4 deprecation warnings for array and string offset access with curly braces

xPDO 2.7.0-pl (May 2, 2018)
====================================
- Fix xPDOIterator failure when fetch returns null due to object hydration
- Make json and array phptypes quotable in xPDOQuery
- Replace all deprecated while/each() loops with foreach() loops for PHP 7.2 compat

xPDO 2.6.0-pl (November 1, 2017)
====================================
- Generate engine into the map files for MySQL
- Make InnoDB the default engine for MySQL
- Add missing return statements to built-in validation classes
- Remove all embedded escape characters when escape() is used on a string
- Make sure empty cache file does not return true in PHP format
- Make sure FileCache uses file/folder permissions options + add optional overrides

xPDO 2.5.3-pl (January 3, 2017)
====================================
- Make sure xPDOQuery base class is always loaded

xPDO 2.5.2-pl (December 16, 2016)
====================================
- Sanitize and prevent SQLi in getObject calls expecting PK values
- Make isValidClause a public static method in xPDOQuery
- Allow empty sort direction
- Revert getCriteria change to force scalar params to be PK values
- Make xPDOQuery::isValidClause a public method
- Change constructor in PclZip to be PHP 7 compatible

xPDO 2.5.1-pl (November 14, 2016)
====================================
- Force scalar parameters to be PK values in getCriteria
- Prevent SQLi in sortby, sort direction, and limit clauses
- Detect SQLi clauses when no space exists after UNION

xPDO 2.5.0-pl (February 3, 2016)
====================================
- Optimize and improve logging
- Fix undefined index notice for model indexes
- Allow definition of primary key fields without legacy index="pk"
- Add ARRAY_EXTENDED logTarget that stores an array of data for each log entry

xPDO 2.4.1-pl (September 22, 2015)
====================================