@@ -1,5 +1,9 @@
 This file shows the changes in this release of xPDO.
 
+- Load related object attributes correctly into nested relations
+- Add option to restrict extraction of files by extension to xPDOZip
+- Fix invalid datetime value being used when formatting with regex
+- Fix xPDOFileCache->delete() when a directory with same cache key exists
 - Fix PHP 7.4 deprecation warnings for array and string offset access with curly braces
 
 xPDO 2.7.0-pl (May 2, 2018)
